--- a/S3_HW(1).html
+++ b/S3_HW(1).html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Очень важный документ</title>
     <script>
-        let x = prompt('Введите имя');
-        alert(`Привет, ${x}`);
-        //console.log(x)
-    </script>
+        function helloYou()
+        {
+            let x = prompt('Введите имя');
+            alert(`Привет, ${x}`);
+            //console.log(x)
+        }
 
+        helloYou();
+    </script>
 </head>
 <body>
     
