--- a/S3_HW(2).html
+++ b/S3_HW(2).html
@@ -12,7 +12,8 @@
         <input type="text" placeholder="Введите ваше имя" id="name">
         <input type="text" placeholder="Введите ваше сообщение" id="message">
         <button onclick="Name()">Отправить</button><br>
-       Сообщение от:<span id="result"></span> <span id="result2"> </span>
+       Пользователь:<span id="result1"></span> <br>
+       Сообщение:<span id="result2"> </span>
         
     </div>
     
